add delete endpoit
